--- a/_posts/2013-06-07-In-the-mood-for-Lisp.html
+++ b/_posts/2013-06-07-In-the-mood-for-Lisp.html
@@ -1,7 +1,7 @@
 ---
 title: In the mood for Lisp
 layout: post
-tags: Lisp Common_Lisp Emacs Raspberry_Pi Lisp_machines
+tags: Lisp Common_Lisp Emacs Raspberry_Pi Lisp_Machines
 ---
 
 
