--- a/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
+++ b/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
@@ -31,9 +31,9 @@ contrasted with equations, graphs, coordinates or ordered pairs, where
 such a constraint doesn't apply.
 </p>
 <p>
-Functional programming aim to work with so-called pure functions
-because they allow clarity of thought. It is easy to reason about
-pure functions, because once defined, they are like black boxes whoses
+Functional programming strives to work with so-called pure functions
+because they allow clarity of thought. It is easy to reason about pure
+functions, because once defined, they are like black boxes whoses
 intricacies can be cast aside, and you can then use them as building
 blocks to compute operations of ascending complexity.
 </p>
