How does it matter?

--- a/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
+++ b/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
@@ -14,7 +14,7 @@ a beginner, this statement represents a double problem.
 <ul>
 <li>What is a side effect? 
 </li>
-<li>What's the matter with them, anyway?
+<li>How does it matter?
 </li>
 </ul>
 
