--- a/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
+++ b/_posts/2013-06-08-How-is-printing-to-the-console-a-side-effect.html
@@ -9,7 +9,7 @@ tags: functional_programming referential_transparency first_principles
 
 <p>
 Functional programming favors functions that have no side effects. For
-a beginner, this statement represents a double problem.
+a beginner, this statement represents a double conundrum.
 </p>
 <ul>
 <li>What is a side effect? 
