--- a/_posts/2013-08-14-Clojurescript-brew-formula.html
+++ b/_posts/2013-08-14-Clojurescript-brew-formula.html
@@ -21,5 +21,5 @@ brew install clojurescript
 
 
 <p>
-This will put the `clojurescript` compiler as an independent executable on your path, but please note that for most intents and purposes, you will want to work with `leiningen` and add `clojurescript` as a project dependency.
+This will put the <code>clojurescript</code> compiler as an independent executable on your path, but please note that for most intents and purposes, you will want to work with <code>leiningen</code> and add <code>clojurescript</code> as a project dependency.
 </p>
