--- a/_posts/2013-08-14-Clojurescript-brew-formula.html
+++ b/_posts/2013-08-14-Clojurescript-brew-formula.html
@@ -7,7 +7,7 @@ tags: clojure clojurescript homebrew Mac_OS_X
 
 
 <p>
-The <a href="https://github.com/clojure/clojurescript/wiki/Quick-Start">Clojurescript quick start</a> guide has been converted into a Homebrew formula, but since that move has proven to be <a href="https://github.com/mxcl/homebrew/pull/21744">contentious</a>, and since I have no idea how long it will take before it gets approved, if ever, I made the formula available directly from a github repository.
+The <a href="https://github.com/clojure/clojurescript/wiki/Quick-Start">Clojurescript quick start</a> guide has been converted into a Homebrew formula, but since that move has proven to be <a href="https://github.com/mxcl/homebrew/pull/21744">contentious</a>, and since I have no idea how long it will take before it gets approved, if at all, I made the formula available directly from a github repository.
 </p>
 <p>
 All you need to do is:
