homebrew formula accepted

--- a/_posts/2013-08-14-Clojurescript-brew-formula.html
+++ b/_posts/2013-08-14-Clojurescript-brew-formula.html
@@ -23,3 +23,12 @@ brew install clojurescript
 <p>
 This will put the <code>clojurescript</code> compiler as an independent executable on your path, but please note that for most intents and purposes, you will want to work with <code>leiningen</code> and add <code>clojurescript</code> as a project dependency.
 </p>
+<p>
+EDIT <span class="timestamp-wrapper"> <span class="timestamp">2013-08-19 Mon</span></span>: The formula has been approved, and is now available as any other homebrew formula.
+</p>
+
+
+
+<pre class="src src-bash">brew install clojurescript
+</pre>
+
