--- a/_posts/2011-12-19-ruby-metaprogramming-from-scratch-talk-ruby-u.html
+++ b/_posts/2011-12-19-ruby-metaprogramming-from-scratch-talk-ruby-u.html
@@ -1,7 +1,7 @@
 ---
 permalink: /ruby-metaprogramming-from-scratch-talk-ruby-u/index.html
 layout: post
-title: ! 'Ruby metaprogramming from scratch, talk @ Ruby underground '
+title: Ruby metaprogramming from scratch, talk @ Ruby underground
 published: true
 categories:
 - ruby Tel-Aviv
