--- a/_posts/2014-01-15-A-rant-on-Lisp-syntax.html
+++ b/_posts/2014-01-15-A-rant-on-Lisp-syntax.html
@@ -102,7 +102,7 @@ With this quote, Doug Hoyte was stressing the fact that Lisp languages are built
 </p>
 
 <p>
-In Lisp languages, syntax is set by initial design but remains extensible by the user. Nested expressions is a byproduct of sexp syntax, but when it becomes an issue, it is being addressed by&#x2026; (Lisp) syntax. I would like to finish this rant with a demonstration of different ways to solve the previous problem in Clojure, and how nested syntax can being kept at a minimum. 
+In Lisp languages, syntax is set by initial design but remains extensible by the user. Nested expressions is a byproduct of sexp syntax, but when it becomes an issue, it is being addressed by&#x2026; (Lisp) syntax. I would like to finish this rant with a demonstration of different ways to solve the previous problem in Clojure, and how nested syntax is being kept at a minimum. 
 </p>
 
 <p>
