--- a/_posts/2014-01-15-Lisp's-nested-syntax.html
+++ b/_posts/2014-01-15-Lisp's-nested-syntax.html
@@ -33,22 +33,23 @@ Here is a simple problem:
 <p>
 OK, I want to create a nested list in Lisp (always of only integers) from a text file, such that each line in the text file would be represented as a sublist in the 'imported' list.
 </p>
+</blockquote>
 
 <p>
 Example of input:
 </p>
-
-<p>
+<pre class="example">
 3 10 2
 4 1
 11 18
-example of output:
-</p>
+</pre>
 
 <p>
-((3 10 2) (4 1) (11 18))
+Example of output: 
 </p>
-</blockquote>
+<pre class="example">
+((3 10 2) (4 1) (11 18))
+</pre>
 
 <p>
 This Ruby one-liner is used to demonstrate an elegant solution involving method chaining.
