--- a/_posts/2014-01-20-Live-coding-with-Clojure-and-Emacs.html
+++ b/_posts/2014-01-20-Live-coding-with-Clojure-and-Emacs.html
@@ -12,7 +12,7 @@ Live coding is a methodology and a mindset that lends itself to all kinds of sce
 </p>
 
 <p>
-<b>tl;dr</b> Watch a 2 minutes video (scroll down) for a demonstration of live coding applied to sketching with CSS. 
+<b>tl;dr</b> Scroll down for a video demonstrating live coding applied to sketching with CSS. 
 </p>
 
 <p>
@@ -95,7 +95,7 @@ The secret sauce is <b>cider-interactive-eval-print</b>, which evaluates a Cloju
 </p>
 
 <ol class="org-ol">
-<li value="7">Try again: <code>M-x imp-visit-buffer</code>. Now make a change in your Clojure buffer and witness instant rendering in the browser.
+<li value="7">Try again: <code>M-x imp-visit-buffer</code>. Now make changes in your Clojure buffer and witness instant rendering in the browser.
 </li>
 </ol>
 
