--- a/_posts/2014-02-28-The-pleasantness-of-Om.html
+++ b/_posts/2014-02-28-The-pleasantness-of-Om.html
@@ -170,5 +170,5 @@ You might have recognized the <code>module pattern</code> in the <code>rotate</c
 </p>
 
 <p>
-Is it a rhetorical question were I to ask which of the two versions, Om + Clojurescsipt vs vanilla JavaScript, looks more pleasant?
+Is it a rhetorical question were I to ask which of the two versions, Om + Clojurescript vs vanilla JavaScript, looks more pleasant?
 </p>
