--- a/_posts/2014-02-28-The-pleasantness-of-Om.html
+++ b/_posts/2014-02-28-The-pleasantness-of-Om.html
@@ -32,7 +32,7 @@ The testimonials are stored in a vector of maps, where a single map might look l
 </div>
 
 <p>
-The ticker doesn’t just pick a random item out of the collection. Instead, all items in the collection get shuffled and are displayed in rotation. After each and every one of them has been shown, the collection is reshuffled. That logic is embodied in the <code>transaction</code> function. It is a one-liner.
+The ticker doesn’t just pick a random item out of the collection. Instead, all items in the collection get shuffled and are displayed in rotation. After each and every one of them has been shown, the collection is reshuffled. That logic is embodied in the <code>transition</code> function. It is a one-liner.
 </p>
 
 <div class="org-src-container">
