--- a/_posts/2014-09-24-Om-mode.html
+++ b/_posts/2014-09-24-Om-mode.html
@@ -11,7 +11,7 @@ categories: clojure clojurescript emacs_lisp emacs live_coding
 Om-mode is a minor mode for Emacs that helps inserting Om components. A short demo is available on <a href="https://www.youtube.com/watch?v=MiTpxQ-rAmc">youtube</a>.
 </p>
 
-<p><iframe width="560" height="315" src="//www.youtube.com/watch?v=MiTpxQ-rAmc" frameborder="0" allowfullscreen></iframe></p>
+<iframe width="420" height="315" src="//www.youtube.com/embed/MiTpxQ-rAmc" frameborder="0" allowfullscreen></iframe>
 
 <p>
 You will probably want to install it via Marmalade or MELPA. A README with usage instructions and source is on <a href="https://github.com/danielsz/om-mode">github</a>.
