--- a/_posts/2014-12-06-lein-runit.html
+++ b/_posts/2014-12-06-lein-runit.html
@@ -21,5 +21,5 @@ Whether or not you’re waiting for the dust to settle on the systemd <a href="h
 </ul>
 
 <p>
-And without further ado, I <a href="https://github.com/danielsz/lein-runit">present</a> to you a Leiningen plugin to automate the workflow.
+And without further ado, I <a href="https://github.com/danielsz/lein-runit">present</a> to you a Leiningen plugin to automate the workflow for Clojure projects.
 </p>
