--- a/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
+++ b/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
@@ -12,7 +12,7 @@ While researching UX strategies for a hybrid mobile app, I stumbled upon <a href
 </p>
 
 <p>
-<b>tl;dr</b> A Clojurescript port of a mobile-friendly, hardware-accelerated UI widget originally implemented in Javascript.
+<b>tl;dr</b> A <a href="http://pageslider.tuppu.net/">Clojurescript port</a> of a mobile-friendly, hardware-accelerated UI widget <a href="http://coenraets.org/samples/pageslider-react/index.html">originally implemented</a> in React.js.
 </p>
 
 <p>
@@ -20,7 +20,7 @@ The goal I wanted to achieve with my port was deceptively simple:  replicate the
 </p>
 
 <p>
-The only thing left for me to do in the context of this post is to jot down a couple of observations. 
+The only thing left to do in the context of this post is to jot down a couple of observations. 
 </p>
 
 <ul class="org-ul">
