left for me to do

--- a/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
+++ b/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
@@ -16,11 +16,11 @@ While researching UX strategies for a hybrid mobile app, I stumbled upon <a href
 </p>
 
 <p>
-The goal I wanted to achieve with my port was deceptively simple:  replicate the exact same user experience, styling and performance of those achieved by Christophe, but in idiomatic Clojurescript. It was a fun little experiment, and I’ll let you, dear reader, be the judge. To the left is Christophe’s <a href="http://coenraets.org/samples/pageslider-react/index.html">demo</a>, to the right is <a href="http://pageslider.tuppu.net/">mine</a>. Can you spot the difference? I certainly can’t, and that’s the whole point. What is instructive to compare, on the other hand, is the source code driving the implementations. (To the left is Christophe’s <a href="https://github.com/ccoenraets/pageslider-react">repo</a>, to the rigth is <a href="https://github.com/danielsz/om-pageslider">mine</a>). 
+The goal I wanted to achieve with my port was deceptively simple:  replicate the exact same user experience, styling and performance of those achieved by Christophe, but in idiomatic Clojurescript. It was a fun little experiment, and I’ll let you, dear reader, be the judge. To the left is Christophe’s <a href="http://coenraets.org/samples/pageslider-react/index.html">demo</a>, to the right is <a href="http://pageslider.tuppu.net/">mine</a>. Can you spot the difference? I certainly can’t, and that’s the whole point. What is instructive to compare, on the other hand, is the source code driving the implementations. So go ahead, dive in the code. To the left is Christophe’s <a href="https://github.com/ccoenraets/pageslider-react">repo</a>, to the right is <a href="https://github.com/danielsz/om-pageslider">mine</a>.
 </p>
 
 <p>
-The only thing left to do in the context of this post is to jot down a couple of observations. 
+The only thing left for me to do in the context of this post is to jot down a couple of observations. 
 </p>
 
 <ul class="org-ul">
