--- a/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
+++ b/_posts/2015-01-21-Om-in-the-Real-World,-A-Case-Study.html
@@ -38,5 +38,5 @@ The only thing left for me to do in the context of this post is to jot down a co
 </ul>
 
 <p>
-Let me know if you dis/like it.
+Please let me know what you think. 
 </p>
