--- a/_posts/2015-05-25-system-0.1.8.html
+++ b/_posts/2015-05-25-system-0.1.8.html
@@ -21,11 +21,17 @@ With Boot, system acts like a smooth operator, enhancing your flow. It aims to t
 
 <p>
 Here are some of the properties that boot-system brings to your workflow:
-Manual and automatic mode, ie. either you manipulate the system in the REPL, or you configure it to react to editing changes.
-Restartable system. What warrants a system restart is user-configurable. File-based granularity.
-Changes that do not require a restart are available in the running system instantly (via namespace reloading).
-Full Lisp-style interactive programming via the REPL and hot-reloading in the browser.
 </p>
+<ul class="org-ul">
+<li>Manual and automatic mode, ie. either you manipulate the system in the REPL, or you configure it to react to editing changes.
+</li>
+<li>Restartable system. What warrants a system restart is user-configurable. File-based granularity.
+</li>
+<li>Changes that do not require a restart are available in the running system instantly (via namespace reloading).
+</li>
+<li>Full Lisp-style interactive programming via the REPL and hot-reloading in the browser.
+</li>
+</ul>
 
 <p>
 Note: System continues to be a convenience library with ready-made components, fully compatible with Leiningen. As a matter of fact, the latest version ships with a new ElasticSearch component, courtesy of Jan Stępień.
