--- a/_posts/2015-06-27-mu4e-account-switching.html
+++ b/_posts/2015-06-27-mu4e-account-switching.html
@@ -1,8 +1,8 @@
 ---
-title: mu4e account :mu4e:mail:emacs:lisp:elisp:emacs-lisp:
+title: mu4e account switching
 layout: post
-tags: 
-categories: 
+tags: mu email Emacs lisp emacs_lisp
+categories: mu email Emacs lisp emacs_lisp
 ---
 
 
