--- a/_posts/2015-06-27-mu4e-account-switching.html
+++ b/_posts/2015-06-27-mu4e-account-switching.html
@@ -8,7 +8,7 @@ categories: mu email Emacs lisp emacs_lisp
 
 
 <p>
-The following code snippet, meant to demonstrate <code>mu4e-compose-pre-hook</code>, is found in <code>mu4e</code> manual: 
+The following code snippet, meant to demonstrate <code>mu4e-compose-pre-hook</code>, is <a href="http://www.djcbsoftware.nl/code/mu/mu4e/Compose-hooks.html">found</a> in <code>mu4e</code> manual: 
 </p>
 
 <div class="org-src-container">
@@ -32,7 +32,7 @@ The following code snippet, meant to demonstrate <code>mu4e-compose-pre-hook</co
 </div>
 
 <p>
-As an illustration, it serves its purpose perfectly, but it goes further than that, answering a need to those of us with multiple email accounts. As a matter of fact, I have seen this snippet many a time in the wild. Sightly adapted, of course, to accomodate configurations with a work and a personal email address, for example. It is only a beginning of a solution, though, because in the real world, in addition to the <code>From</code> email, you would probably want to switch the full name and signature as well.
+As an illustration, it serves its purpose perfectly, but it goes further than that, answering a need to those of us with multiple email accounts. As a matter of fact, I have seen this snippet many a time in the wild. Sightly adapted, of course. To accomodate configurations with a work and a personal email address, for example. It is only a beginning of a solution, though, because in the real world, in addition to the <code>From</code> email, you would probably want to switch the full name and signature as well.
 </p>
 
 <p>
