--- a/_posts/2016-05-06-Ghosts-in-the-machine.html
+++ b/_posts/2016-05-06-Ghosts-in-the-machine.html
@@ -126,7 +126,7 @@ Note: We are restricting the present discussion to static Vars. Dynamic Vars hav
 </div>
 
 <pre class="example">
-nil#'matrix/Neo#agent[{:status :ready, :val [#'choice/pill "red"]} 0x170506fe]
+nil#'matrix/Neo#agent[{:status :ready, :val [#'choice/pill "red"]} 0x2d9ce99c]
 </pre>
 
 <p>
@@ -145,7 +145,7 @@ If we redefine our Var, our agent will pick up the new value.
 </div>
 
 <pre class="example">
-#'choice/pill#agent[{:status :ready, :val [#'choice/pill "red" "blue"]} 0x170506fe]
+#'choice/pill#agent[{:status :ready, :val [#'choice/pill "red" "blue"]} 0x2d9ce99c]
 </pre>
 
 <div class="org-src-container">
@@ -216,7 +216,7 @@ Of course. But what if we ask Neo?
 </div>
 
 <pre class="example">
-#agent[{:status :ready, :val [#'choice/pill "red" "blue" "blue"]} 0x170506fe]
+#agent[{:status :ready, :val [#'choice/pill "red" "blue" "blue"]} 0x2d9ce99c]
 </pre>
 
 <p>
@@ -252,7 +252,7 @@ If this seems like a contrived exercise, please note that this is exactly what h
 </pre>
 </div>
 <pre class="example">
-#agent[{:status :ready, :val [#'choice/pill "red" "blue" "blue" "blue"]} 0x170506fe]
+#agent[{:status :ready, :val [#'choice/pill "red" "blue" "blue" "blue"]} 0x2d9ce99c]
 </pre>
 
 <p>
@@ -334,7 +334,7 @@ Taken in isolation, an abstraction is like a Platonic ideal: principled, self-co
 </p>
 
 <p>
-The equivalent of the body and mind dualism in computer engineering is the runtime and specification dualism. The runtime implements an execution model that may or may not coincide with the specification of a client programming language. We often think of programming semantics as anterior or prevalent to the runtime, but they belong to different categories altogether. 
+The equivalent of the body and mind dualism in computer engineering is the duality of the runtime and the specification. The runtime implements an execution model that may or may not coincide with the specification of a client programming language. We often think of programming semantics as anterior or prevalent to the runtime, but they belong to different categories altogether. 
 </p>
 
 <p>
@@ -405,5 +405,5 @@ If you use the reloaded workflow and you restart all parts of your system, the J
 </p>
 
 <p>
-How big is this a problem? Well, an accumulation of live objects that won’t be deallocated fall in the class of memory leaks. The heap will grow at a rate proportional to the number of times <code>refresh</code> is called. This only happens during development time, so this is a rather benign condition. Especially considering the <a href="https://github.com/clojure/tools.namespace#reloading-code-motivation">benefits</a> of using <code>tools.namespace</code>. 
+How big is this a problem? Well, an accumulation of live objects that won’t be deallocated fall in the class of memory leaks. The heap will grow at a rate proportional to the number of times <code>refresh</code> is called. This only happens during development time, so this is a rather benign condition. Especially considering the <a href="https://github.com/clojure/tools.namespace#reloading-code-motivation">benefits</a> of using <code>tools.namespace</code>.
 </p>
